[tool.poetry]
name = "pubmed-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-ollama = "^0.2.0"
sentence-transformers = "^3.3.1"
transformers = "^4.46.3"
shiny = "^1.2.1"
keybert = "^0.8.5"
yake = "^0.4.8"
rake-nltk = "^1.0.6"
spacy = "3.7.0"
pydantic = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
